gitignore optimization params